--- a/blog/2024-01-15-welcome.md
+++ b/blog/2024-01-15-welcome.md
@@ -2,30 +2,34 @@
 slug: welcome
 title: Welcome to my blog!
 authors: [zezhen]
-tags: [introduction, academic-life, research]
+tags: [introduction]
 ---
 
-Welcome to my personal blog! This is where I'll share my thoughts on research, technology, and academic life.
+Welcome to my personal blog! This is where I'll share my thoughts on behavioral science, AI evaluation, programming, research methodologies, and life as an academic-turned-industry scientist.
 
 <!--truncate-->
 
 ## What to Expect
 
-In this blog, you can expect to find:
+In this blog, you can expect to find posts across several areas that reflect my interdisciplinary background:
 
-- **Research insights**: Thoughts and findings from my ongoing research projects
-- **Technical tutorials**: Explanations of tools, methods, and techniques I use
-- **Academic reflections**: Musings on academic life, conferences, and the research community
-- **Personal updates**: Updates on my projects and career journey
+- **Behavioral science insights**: Thoughts on psychology, social interventions, and human behavior
+- **AI evaluation and ethics**: Perspectives on evaluating AI systems for social impact
+- **Programming and data science**: Code tutorials, R packages, statistical methods, and research tools
+- **Research methodologies**: Reflections on experimental design, measurement, and evidence-based practice
+- **Random musings**: Personal thoughts, career reflections, music, and life updates
 
-## Tags and Organization
+## How I Organize Content
 
-I'll be using tags to organize posts by topic. Some of the main categories you'll see include:
+I use tags to organize posts by topic. Here's what each tag covers:
 
-- `research` - Posts about my research work
-- `tutorial` - How-to guides and technical explanations  
-- `academic-life` - Thoughts on academic career and community
-- `tools` - Reviews and guides for research tools and software
-- `conference` - Conference reports and reflections
+- **`introduction`** - Welcome posts and overviews of new projects or directions
+- **`psychology`** - Behavioral science, social psychology, intervention design, and human development
+- **`AI`** - Artificial intelligence evaluation, ethics, social impact, and technology assessment  
+- **`programming`** - R, Python, statistical computing, data visualization, and software development
+- **`research`** - Methodology, experimental design, measurement, meta-analysis, and academic insights
+- **`random`** - Personal reflections, music, travel, career thoughts, and miscellaneous topics
+
+Whether you're interested in rigorous research methods, practical programming solutions, or thoughtful AI evaluation, I hope you'll find something valuable here. 
 
 Stay tuned for more content!
